# Archlinux-downgrader

./: .SRCINFO  Actions.h  Interface.h  LICENSE  Makefile  Makefile.am  Makefile.in  PKGBUILD  README  README.md  TODO  TODO.tasks  aclocal.m4  actions.c  ala.c  arm.c  class_Actions.h  class_Interface.h  configure  configure.ac  downgrader.install  functions.cc  geany.geany  http.cc  interface.cc  main.c  main.cc  var.h  variables.h
po/: POTFILES.in
src/: Makefile.am  Makefile.in  functions.cc  http.cc  interface.cc  main.cc  var.h
