## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = downgrader

downgrader_SOURCES = \
	main.cc     \
	var.h     \
	functions.cc     \
	http.cc     \
	interface.cc

downgrader_LDFLAGS = 

downgrader_LDADD = 

